--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "author": "george_jose",
   "license": "ISC",
-  
   "dependencies": {
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
@@ -21,7 +20,9 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongodb": "^5.7.0",
-    "mongoose": "^7.3.4",
+    "mongoose": "^7.4.1",
+    "nodemailer": "^6.9.4",
+    "otp-generator": "^4.0.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
