--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
     "express-jwt": "^8.4.1",
     "express-session": "^1.17.3",
     "gridfs-stream": "^1.1.1",
