--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node script",
+    "start": "node app.js",
     "dev": "nodemon script"
   },
   "author": "george_jose",
@@ -14,6 +14,7 @@
     "apexcharts": "^3.41.1",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.40.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
